system/k8s/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: hequan
  namespace: default
spec:
  selector:
    app: hequan
    release: stable
  ports:
  - name: nginx
    port: 80
    targetPort: 80
